Update CORS configuration for production deployment

--- a/.env.example
+++ b/.env.example
@@ -3,5 +3,8 @@ OPENROUTER_API_KEY=sk-or-v1-your-key-here
 OPENROUTER_SITE=http://localhost:3000
 OPENROUTER_TITLE=VizArch
 
+# CORS Origins (comma-separated) - for development
+ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001,http://127.0.0.1:3000
+
 # OpenRouter API Configuration (do not change)
 OPENROUTER_BASE_URL=https://openrouter.ai/api/v1
