--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -4,7 +4,5 @@
   "installCommand": "npm ci",
   "framework": "nextjs",
   "outputDirectory": ".next",
-  "env": {
-    "NEXT_PUBLIC_API_URL": "@next_public_api_url"
-  }
+  "env": {}
 }
